--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">FunctionalPractice</string>
     <string name="action_settings">Settings</string>
+
+    <string name="collase_toolbar_activity">可伸缩Toolbar</string>
 </resources>
