--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="collase_toolbar_activity">可伸缩Toolbar</string>
     <string name="toolbar_activity">Toolbar</string>
     <string name="volley_activity">Volley</string>
+    <string name="json_activity">JSON</string>
 </resources>
