--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="toolbar_activity">Toolbar</string>
     <string name="volley_activity">Volley</string>
     <string name="json_activity">JSON</string>
+    <string name="picture_download_activity">图片下载</string>
 </resources>
