--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="volley_activity">Volley</string>
     <string name="json_activity">JSON</string>
     <string name="picture_download_activity">图片下载</string>
+    <string name="web_view_activity">WebView</string>
 </resources>
