--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="web_view_activity">WebView</string>
     <string name="animation_activity">Animation</string>
     <string name="select_image_activity">选择图片</string>
+    <string name="popuwindow_activity">Popu Window</string>
 </resources>
